--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
     "lucide-react": "^0.279.0",
-    "next": "^14.0.4",
+    "next": "14.1.3",
     "next-themes": "^0.2.1",
     "openai": "^4.24.7",
     "react": "^18.2.0",
